--- a/stylesheet.css
+++ b/stylesheet.css
@@ -266,6 +266,51 @@ footer img {
   flex-wrap: wrap;
 }
 
+.menu-icon-close {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  display: none;
+}
+
+#menu-btn-check {
+  display: none;
+}
+
+.menu-content {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 65px;
+  left: 100%;
+  z-index: 10;
+  background-color: rgba(34,49,52,0.9);
+  transition: all 0.5s;
+}
+
+.menu-content ul {
+  padding: 0;
+  margin: 0;
+}
+
+.menu-content ul li {
+  list-style: none;
+}
+
+.menu-content ul li a {
+  line-height: 65px;
+  padding: 0 25px;
+  color: white;
+  display: block;
+  transition: all 0.5s;
+}
+
+.menu-content ul li a:hover {
+  background-color: rgba(255,255,255,0.3);
+}
+
+
 
 
 
@@ -343,5 +388,21 @@ footer img {
 @media all and (max-width: 670px) {
   .lesson-wrapper {
     height: 1275px;
+  }
+
+  .menu-icon-close {
+    display: none;
+  }
+
+  #menu-btn-check:checked ~ .menu-btn .menu-icon {
+    display: none;
+  }
+
+  #menu-btn-check:checked ~ .menu-btn .menu-icon-close {
+    display: block;
+  }
+
+  #menu-btn-check:checked ~ .menu-content {
+    left: 0;
   }
 }
